--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "bootstrap": "~3.3.4",
     "moment": "~2.10.2",
     "lodash": "~3.8.0",
-    "angular-route": "~1.3.15"
+    "angular-route": "~1.3.15",
+    "open-sans-fontface": "~1.4.0"
   }
 }
