--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "moment": "~2.10.2",
     "lodash": "~3.8.0",
     "angular-route": "~1.3.15",
-    "open-sans-fontface": "~1.4.0"
+    "open-sans-fontface": "~1.4.0",
+    "animate.css": "~3.3.0"
   }
 }
