--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "devDependencies": {
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
-    "gulp-sass": "^2.0.1"
+    "gulp-jshint": "^1.10.0",
+    "gulp-sass": "^2.0.1",
+    "jshint-stylish": "^1.0.2"
   }
 }
