--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Yanwen",
   "license": "MIT",
   "devDependencies": {
+    "browser-sync": "^2.7.10",
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
     "gulp-jshint": "^1.10.0",
