--- a/bower.json
+++ b/bower.json
@@ -15,8 +15,9 @@
     "bootstrap": "~3.3.4",
     "moment": "~2.10.2",
     "lodash": "~3.8.0",
-    "angular-route": "~1.3.15",
-    "open-sans-fontface": "~1.4.0",
-    "animate.css": "~3.3.0"
+    "angular-route": "~1.3.15"
+  },
+  "devDependencies": {
+    "bootstrap-sass": "~3.3.4"
   }
 }
