--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "bootstrap": "~3.3.4",
     "moment": "~2.10.2",
     "lodash": "~3.8.0",
-    "angular-route": "~1.3.15"
+    "angular-route": "~1.3.15",
+    "angular-bootstrap": "~0.13.0"
   },
   "devDependencies": {
     "bootstrap-sass": "~3.3.4"
