--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "moment": "~2.10.2",
     "lodash": "~3.8.0",
     "angular-route": "~1.3.15",
-    "angular-bootstrap": "~0.13.0"
+    "angular-bootstrap": "~0.13.0",
+    "angular-ui-router": "~0.2.15"
   },
   "devDependencies": {
     "bootstrap-sass": "~3.3.4"
