--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "lodash": "~3.8.0",
     "angular-route": "~1.3.15",
     "angular-bootstrap": "~0.13.0",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "animate.css": "~3.3.0"
   },
   "devDependencies": {
     "bootstrap-sass": "~3.3.4"
